Real time currensy balance check block added

--- a/style.css
+++ b/style.css
@@ -90,6 +90,30 @@ header nav ul li a{
     font-size: 27px;
 line-height: 33px;
 }
+.T8{
+    display: block;
+    margin: 0;
+    padding: 0;
+    font-size: 40px;
+    line-height: 49px;
+    margin-left: 900px;
+    margin-top: 180px;
+    max-width: 500px;
+}
+.T9{
+    margin-left: 900px;
+    font-size: 20px;
+    line-height: 24px;
+opacity: 0.75;
+max-width: 400px;
+
+}
+.T10{
+    font-size: 22px;
+    line-height: 27px;
+    color: #6C63FF;
+    margin-left: 900px;
+}
 .UL{
     display: flex;
     align-items: center;
@@ -163,7 +187,13 @@ line-height: 33px;
     height: 3px;
     background-color: #B7B3B3;
 }
-
+#Border3{
+    margin-top: 10px;
+    margin-left: 902px;
+    width: 86px;
+    height: 3px;
+    background-color: #B7B3B3;
+}
 
 #LogoParent{
     display: flex;
@@ -197,4 +227,28 @@ margin-top: -45px;
 }
 .IMGU{
     margin: 0 12px;
+}
+.C4__Img{
+z-index: -1;
+    margin-top: 150px;
+    position: absolute;
+    background-color: #fffcfc;
+    height: 580px;
+    width: 100%;
+
+}
+#I1{
+    z-index: -1;
+    margin-top: 135px;
+    position: absolute;
+    width: 305px;
+    height: 305px;
+}
+#I2{
+    margin-top: 230px;
+    margin-left: 65px;
+}
+.C4 img{
+   width: 495px;
+   height: 298px;
 }
