--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,300;1,500&display=swap');
+
 *{
     box-sizing: border-box;
 }
@@ -46,8 +47,25 @@ header nav ul li a{
 .M500{
     font-weight: 500;
 }
+.M500I{
+    font-weight: 500;
+    font-style: italic;
+}
 .M400{
     font-weight: 400;
+}
+.M300{
+    font-weight: 300;
+    font-style: italic;
+}
+.Circle{
+    color: #E5E5E5;
+    opacity: 0.3;
+    width: 185px;
+    height: 185px;
+    position: absolute;
+    margin-top: -270px;
+    margin-left: -70px;
 }
 .T1{
     margin-left: 14px;
@@ -153,6 +171,64 @@ max-width: 400px;
     max-width: 403px;
     margin-left: 20px;
 }
+.T16{
+    color: #FFFFFF;
+    font-size: 33px;
+    line-height: 50px;
+    max-width: 160px;
+    margin: 0;
+}
+.T17{
+    margin: 0;
+    font-size: 22px;
+line-height: 27px;
+color: white;
+}
+.T18{
+    padding-top: 23px;
+    padding-left: 26px;
+    
+    margin-bottom: 0;
+    color: black;
+    font-size: 20px;
+line-height: 35px;
+max-width: 245px;
+}
+.T19{
+    display: block;
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+}
+.T20{
+    display: block;
+    font-size: 16px;
+    color: #787777;
+    margin: 0;
+    padding: 0;
+}
+.T21{
+    padding-top: 23px;
+    padding-left: 26px;
+    margin-bottom: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    color: black;
+    font-size: 20px;
+line-height: 35px;
+max-width: 245px;
+}
+.T22{
+   
+    padding-left: 26px;
+    margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    color: black;
+    font-size: 20px;
+line-height: 35px;
+max-width: 245px;
+}
 .UL{
     display: flex;
     align-items: center;
@@ -231,7 +307,54 @@ max-width: 400px;
     justify-content: center;
     margin-left: 135px;
 }
-
+.C8{
+    margin-top: 300px;
+    background-color: #6C63FF;
+    width: 100%;
+    height: 425px;
+    display: flex;
+    
+}
+.C9{
+ padding-top: 60px;
+ margin-left: 150px;
+}
+.C10{
+    display: flex;
+    margin-left: 350px;
+    
+}
+.C11{
+    margin-left: 100px;
+    margin-top: -53px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+flex-direction: column;
+}
+.Card1{
+    margin-left: 18px;
+    margin-top: 60px;
+    background-color: white;
+    border-radius: 15px;
+    width: 300px;
+    height: 300px;
+}
+.Card2{
+    margin-left: 18px;
+    margin-top: 60px;
+    background-color: white;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    width: 205px;
+    height: 300px;
+}
+.img3{
+    width: 59px;
+    height: 59px;
+    margin-top: 5px;
+    margin-left: 25px;
+}
 #Border1{
     margin-top: 10px;
     margin-left: 2px;
@@ -260,6 +383,13 @@ max-width: 400px;
     height: 3px;
     background-color: #B7B3B3;
 }
+#Border5{
+    margin-top: 17px;
+    margin-bottom: 26px;
+    width: 58px;
+    height: 3px;
+    background-color: #ffffff;
+}
 #LogoParent{
     display: flex;
     align-items: center;
@@ -273,6 +403,13 @@ max-width: 400px;
 
     width: 509px;
     height: 364px;
+}
+.img2{
+    width: 36px;
+    height: 36px;
+    position: absolute;
+    margin-top: -7.5px;
+    margin-left: 11px;
 }
 #img1_Parent{
 position: absolute;
