--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ max-width: 245px;
     width: 100%;
     height: 425px;
     display: flex;
-    
+    z-index: 0;
 }
 .C9{
  padding-top: 60px;
@@ -333,6 +333,7 @@ max-width: 245px;
 flex-direction: column;
 }
 .Card1{
+    z-index: 1;
     margin-left: 18px;
     margin-top: 60px;
     background-color: white;
@@ -341,6 +342,7 @@ flex-direction: column;
     height: 300px;
 }
 .Card2{
+    z-index: 1;
     margin-left: 18px;
     margin-top: 60px;
     background-color: white;
@@ -348,6 +350,15 @@ flex-direction: column;
     border-bottom-left-radius: 15px;
     width: 205px;
     height: 300px;
+}
+.Circle2{
+    position: absolute;
+    opacity: 0.3;
+    margin-left: -120px;
+    margin-top: 185px;
+    z-index: 0;
+    width: 400px;
+    height: 400px;
 }
 .img3{
     width: 59px;
