--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,300;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;1,300;1,500&display=swap');
 
 *{
     box-sizing: border-box;
@@ -57,6 +57,9 @@ header nav ul li a{
 .M300{
     font-weight: 300;
     font-style: italic;
+}
+.M800{
+    font-weight: 800;
 }
 .Circle{
     color: #E5E5E5;
@@ -229,6 +232,52 @@ max-width: 245px;
 line-height: 35px;
 max-width: 245px;
 }
+.T23{
+    font-size: 14px;
+    opacity: 0.4;
+    margin-left: 100px;
+    margin-bottom: 5px;
+}
+.T24{
+    margin-left: 14px;
+    color: #6C63FF;
+    font-size: 25px;
+
+}
+.T25{
+    margin-left: 100px;
+    margin-top: 50px;
+    color: #B7B3B3;
+    font-size: 18px;
+line-height: 22px;
+max-width: 300px;
+
+}
+.T26{
+    font-size: 18px;
+line-height: 22px;
+color: #8B8B8B;
+}
+.T27{
+    list-style-type: none;
+  
+}
+.T27 a{
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    line-height: 50px;
+}
+#LogoParent2{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 100px;
+}
+#LogoParent2 img{
+    width: 51px;
+    height: 51px;
+}
 .UL{
     display: flex;
     align-items: center;
@@ -332,6 +381,22 @@ max-width: 245px;
     align-items: flex-start;
 flex-direction: column;
 }
+.C13{
+    margin-top: 75px;
+}
+.C14{
+    
+    display: flex;
+    align-items: flex-start;
+}
+.C15 ul{
+    margin-left: 100px;
+    margin-top: 120px;
+}
+
+footer{
+    height: 500px;
+}
 .Card1{
     z-index: 1;
     margin-left: 18px;
@@ -406,6 +471,7 @@ flex-direction: column;
     align-items: center;
     margin-left: 61px;
 }
+
 #LogoParent img{
     width: 51px;
     height: 51px;
