--- a/style.css
+++ b/style.css
@@ -268,6 +268,31 @@ color: #8B8B8B;
     font-size: 18px;
     line-height: 50px;
 }
+
+.T29{
+    list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.T29 a{
+    text-decoration: none;
+    color: white;
+    font-size: 22px;
+    line-height: 50px;
+    
+}
+.T29 img{
+    width: 57px;
+    height: 57px;
+}
+
+.T28{
+    color: white;   
+    font-size: 22px;
+    align-self: center;
+}
+
 #LogoParent2{
     display: flex;
     flex-direction: row;
@@ -393,7 +418,35 @@ flex-direction: column;
     margin-left: 100px;
     margin-top: 120px;
 }
-
+.C16 ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 120px;
+    padding: 0;
+}
+.C16 li{
+    margin-left: 25px;
+    margin-bottom: 10px;
+}
+.C16{
+    width: 223px;
+    height: 300px;
+    background-color: #6C63FF;
+    border-radius: 25px;
+    margin-left: 100px;
+    margin-top: -45px;
+}
+#T30{
+    margin-left: 15px;
+}
+#T31{
+    margin-left: 40px;
+}
+#T32{
+    margin-left: 38px;
+}
 footer{
     height: 500px;
 }
