--- a/style.css
+++ b/style.css
@@ -705,6 +705,7 @@ height: 76px;
     header nav ul li{
         list-style-type: none;
         margin-right: 20px;
+        
     }
 }
 @media screen and (max-width: 1000px){
@@ -718,7 +719,10 @@ height: 76px;
     header nav ul li{
         list-style-type: none;
         margin-top: 10px;
-       
+        margin-right: 0;
+    }
+    .ButtonParent1{
+        margin-right: 0;
     }
     .Outline{
         border: 1px solid black;
