More text adaptive added

--- a/style.css
+++ b/style.css
@@ -1071,6 +1071,21 @@ height: 400px;
     .T6{
         padding: 0 15px;
     }
+    .T12{
+        padding: 0 15px;
+    }
+    .T8{
+        padding: 0 15px;
+    }
+    .T9{
+        padding: 0 15px;
+    }
+    .T11{
+        padding: 0 5px;
+    }
+    .T15{
+        padding: 0 10px;
+    }
     .C15 ul{
         padding: 0;
     padding-left: 0;
